--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <!-- Latest compiled and minified CSS -->
-<link rel="stylesheet" href="./Website/bootstrap.min.css">
+<link type="text/css" rel="stylesheet" href="style.css" />
 
 <!-- jQuery library -->
 <script src="./Website/jquery.min.js"></script>
