--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 <link type="text/css" rel="stylesheet" href="style.css" />
 
 <!-- jQuery library -->
-<script src="./Website/jquery.min.js"></script>
+<script src="jquery.min.js"></script>
 
 <!-- Latest compiled JavaScript -->
-<script src="./Website/bootstrap.min.js"></script>
+<script src="bootstrap.min.js"></script>
  </head><body><div class="container">
  <!-- Brand and toggle get grouped for better mobile display -->
  
