--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <!-- Latest compiled and minified CSS -->
-<link type="text/css" rel="stylesheet" href="style.css" />
+<link rel="stylesheet" href="bootstrap.min.css">
 
 <!-- jQuery library -->
 <script src="jquery.min.js"></script>
