Update and rename Ruoyuan Liu.html to index.html

--- a/index.html
+++ b/index.html
@@ -52,13 +52,13 @@ ul.space_list li { margin-bottom: 1mm; }
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <!-- Latest compiled and minified CSS -->
-<link rel="stylesheet" href="./rliu_files/bootstrap.min.css">
+<link rel="stylesheet" href="bootstrap.min.css">
 
 <!-- jQuery library -->
-<script src="./rliu_files/jquery.min.js"></script>
+<script src="jquery.min.js"></script>
 
 <!-- Latest compiled JavaScript -->
-<script src="./rliu_files/bootstrap.min.js"></script>
+<script src="bootstrap.min.js"></script>
 </head>
 
 <body style="background-color:#F2F5F5;">
@@ -85,7 +85,7 @@ ul.space_list li { margin-bottom: 1mm; }
 <div class="row">
 <div class="col-md-3 ">
 
-<img src="./rliu_files/web2.png" width="220" height="220" class="center-block">
+<img src="IMG_2313.jpg" width="220" height="220" class="center-block">
 
 <br>
 
