--- a/index-2.html
+++ b/index-2.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="google-site-verification" content="omjlnsu8ttZvlzp1ab5c0Xz86G8vOc9g0lbf_NAj8Z8" />
-	<meta content="Pawel Duch" name="author">
+	<meta content="Younes Zine" name="author">
 	<meta name="viewport" content="width=device-width; initial-scale=1" />
 	<title> Paweł Duch </title>
 	<link type="text/css" rel="stylesheet" href="style.css" />
@@ -13,7 +13,7 @@
 	<div id="wrapper">
 		<header> 
 		<h1>Paweł Duch</h1>
- 		<img src="photo.jpg"/>
+ 		<img src="IMG_2313.jpg"/>
 		</header>
 
 		<article>
