--- a/index.html
+++ b/index.html
@@ -12,13 +12,15 @@
 <body>
 	<div id="wrapper">
 		<header> 
-		<h1>Paweł Duch</h1>
+		<h1>Younes Zine</h1>
  		<img src="IMG_2313.jpg"/>
 		</header>
 
 		<article>
 		<h3> About Me </h3>
-		<p> I am a postdoctoral researcher in the group of Martin Hairer at the <a href="https://www.epfl.ch/labs/propde/members/">École Polytechnique Fédérale de Lausanne</a>. Previously, I was a postdoc at Adam Mickiewicz University in Poznań and Max Planck Institute for Mathematics in the Sciences in Leipzig. I received my PhD in 2017 from the Jagiellonian University in Kraków.  
+		<p> I am a postdoc in the group of <a href="https://www.hairer.org">
+Prof. Martin Hairer</a> at EPFL (Switzerland). I was previously a Ph.D. student at the University of Edinburgh (UK) under the supervision of <a href="https://www.maths.ed.ac.uk/~toh/">
+Prof. Tadahiro Oh</a></a>. Previously, I was a postdoc at Adam Mickiewicz University in Poznań and Max Planck Institute for Mathematics in the Sciences in Leipzig. I received my PhD in 2017 from the Jagiellonian University in Kraków.  
 		
 		<h3> Research interests</h3>
 		
