--- a/index.html
+++ b/index.html
@@ -23,16 +23,17 @@ Prof. Martin Hairer</a> at EPFL (Switzerland). I was previously a Ph.D. student 
 Prof. Tadahiro Oh</a></a>. 
 
 <br>
+
+<br>
+
 		
-	<b>Research interest:</b>	
-
-<br>	
-
-<br> 
+        <h3> Research interest</h3>
 
 <li> Nonlinear dispersive and parabolic PDEs </li>
 
 <li> Stochastic PDEs, Probability theory </li>
+
+<li> Harmnonic analysis </li>
 
 <br>	    
         
