--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@ Global well-posedness of the one-dimensional fractional cubic nonlinear Schrödi
         Switzerland
         
         <p> 
-        Office: <a href="https://plan.epfl.ch/?room==MA%20B2%20487">MA B2 487</a>
+        Office: MA C2 595
         </p>
 
 	</div>
