--- a/index.html
+++ b/index.html
@@ -59,12 +59,9 @@ Smoluchowski-Kramers approximation for the singular stochastic wave
 equations in two dimensions</a>.
 
 
-<li> 
-<a href = "pdf/RZ_SCGLv7.pdf"> Stochastic complex Ginzburg-Landau equation on compact surfaces</a> (with T. Robert).
-</li>
 
 <li>
-<a rel="noreferrer noopener" href="https://arxiv.org/abs/2211.02938" target="_blank">A note on products of stochastic objects</a> (with T. Oh).
+<a rel="noreferrer noopener" href="https://arxiv.org/abs/2211.02938" target="_blank">A note on products of stochastic objects</a> (with T. Oh), to appear in <b>Kyoto J. Math</b>.
 </li>
 
 
