--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ equations in two dimensions</a>.
 
 
 <li> 
-<a rel="noreferrer noopener" href="https://arxiv.org/abs/2206.08719" target="_blank">Norm inflation for the derivative nonlinear Schrödinger equation</a> (with Y. Wang).
+<a rel="noreferrer noopener" href="https://arxiv.org/abs/2206.08719" target="_blank">Norm inflation for the derivative nonlinear Schrödinger equation</a> (with Y. Wang), to appear in .
 </li>
 
 
