--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ equations in two dimensions</a>.
 
 
 <li> 
-<a rel="noreferrer noopener" href="https://arxiv.org/abs/2206.08719" target="_blank">Norm inflation for the derivative nonlinear Schrödinger equation</a> (with Y. Wang), to appear in .
+<a rel="noreferrer noopener" href="https://arxiv.org/abs/2206.08719" target="_blank">Norm inflation for the derivative nonlinear Schrödinger equation</a> (with Y. Wang), to appear in <b>C. R. Math. Acad. Sci. Paris</b>.
 </li>
 
 
@@ -77,7 +77,7 @@ equations in two dimensions</a>.
 
 
 <li>
-Global well-posedness of the one-dimensional fractional cubic nonlinear Schrödinger equations  (with G. Li and K. Seong), preprint.
+<a rel="noreferrer noopener" href="https://arxiv.org/abs/2311.13370" target="_blank">Global well-posedness of the one-dimensional fractional cubic nonlinear Schrödinger equations</a> (with E.Brun, G. Li and R. Liu).
 </li>
 
 
