--- a/index.html
+++ b/index.html
@@ -97,13 +97,15 @@ equations in two dimensions</a>.
         <h3> Organisation</h3> 
 
 	<li>
-	<a href=http://www.macs.hw.ac.uk/~op4/3daysWS.html>Workshop: "Deterministic and Probabilistic Dynamics of Nonlinear Dispersive PDEs"</a> (14-16 June 2023).
+	<a href=http://www.macs.hw.ac.uk/~op4/3daysWS.html>Workshop: "Deterministic and Probabilistic Dynamics of Nonlinear Dispersive PDEs"</a> (14-16 June 2023, co-organiser).
 
 	</li>
         
         <li>
         <a href=https://bernoulli.epfl.ch/programs/young-researchers-in-deterministic-and-probabilistic-dispersive-equations/>Workshop: "Young researchers in deterministic and probabilistic dispersive equations"</a> (7-11 October 2024, co-organiser).
         </li>
+
+	<br>
         
         <h3>Contact</h3>
 
