--- a/index.html
+++ b/index.html
@@ -93,8 +93,23 @@ equations in two dimensions</a>.
 
 </ol>
 
+ <h3> Talks</h3> 
+
+<li>
+Talk 1
+
+</li>
         
-        <h3> Organisation</h3> 
+<li>
+Talk 2
+</li>
+
+	<br>
+
+			
+
+        
+        <h3> Events organised</h3> 
 
 	<li>
 	<a href=http://www.macs.hw.ac.uk/~op4/3daysWS.html>Workshop: "Deterministic and Probabilistic Dynamics of Nonlinear Dispersive PDEs"</a> (14-16 June 2023, co-organiser).
