--- a/index.html
+++ b/index.html
@@ -96,12 +96,25 @@ equations in two dimensions</a>.
  <h3> Talks</h3> 
 
 <li>
-Talk 1
+Probability in the North East workshop, University of Edinburgh, UK, Feb. 2023.
+</li>
 
+<li>
+Analysis seminar, ENS Lyon, France, Dec. 2022. 
+</li>
+
+
+<li>
+Mathematical Finance and Stochastic Analysis seminar, University of York, UK, Nov. 2022.
+</li>
+
+
+<li>
+Analysis seminar, University of Birmingham, UK, Nov. 2022. 
 </li>
         
 <li>
-Talk 2
+Analysis seminar, University of Edinburgh, UK, Oct. 2022.
 </li>
 
 	<br>
