--- a/index.html
+++ b/index.html
@@ -94,6 +94,17 @@ equations in two dimensions</a>.
 </ol>
 
  <h3> Talks</h3> 
+<li>
+Analysis seminar, University of Edinburgh, UK, Dec. 2023.
+</li>
+
+<li>
+Probability seminar, Cornell University , USA, Nov. 2023.
+</li>
+
+<li>
+Probability seminar, T.U. Berlin, Germany, May 2023.
+</li>
 
 <li>
 Probability in the North East workshop, University of Edinburgh, UK, Feb. 2023.
