--- a/index.html
+++ b/index.html
@@ -94,6 +94,23 @@ equations in two dimensions</a>.
 </ol>
 
  <h3> Talks</h3> 
+
+<li>
+Analysis seminar, Princeton University, USA, Nov. 2024.
+</li>			
+
+<li>
+Workshop "Harmonic and Stochastic Analysis of Dispersive PDEs", Universität Bielefeld, Germany, June 2024.
+</li>
+
+<li>
+Workshop "Stochastic Dynamics and Stochastic Equations", Bernoulli Centre, EPFL, Lausanne, Switzerland, March 2024.
+</li>
+
+<li>
+Arbeitsgemeinschaft: QFT and Stochastic PDEs, Mathematisches Forschungsinstitut Oberwolfach, Germany, Dec. 2023
+</li>
+
 <li>
 Analysis seminar, University of Edinburgh, UK, Dec. 2023.
 </li>
