--- a/index.html
+++ b/index.html
@@ -96,7 +96,15 @@ equations in two dimensions</a>.
  <h3> Talks</h3> 
 
 <li>
-Analysis seminar, Princeton University, USA, Nov. 2024.
+(upcoming) Analysis seminar, University of Bonn, Germany, Jan. 2025
+</li>				
+
+<li>
+(upcoming) Séminaire de Probabilités et Statistiques, Institut Élie Cartan de Lorraine, France, Nov. 2024.
+</li>	
+
+<li>
+(upcoming) Analysis seminar, Princeton University, USA, Nov. 2024.
 </li>			
 
 <li>
@@ -104,7 +112,7 @@ Workshop "Harmonic and Stochastic Analysis of Dispersive PDEs", Universität Bie
 </li>
 
 <li>
-Workshop "Stochastic Dynamics and Stochastic Equations", Bernoulli Centre, EPFL, Lausanne, Switzerland, March 2024.
+Workshop "Stochastic Dynamics and Stochastic Equations", Bernoulli Centre, EPFL, Switzerland, March 2024.
 </li>
 
 <li>
@@ -116,7 +124,7 @@ Analysis seminar, University of Edinburgh, UK, Dec. 2023.
 </li>
 
 <li>
-Probability seminar, Cornell University , USA, Nov. 2023.
+Probability seminar, Cornell University, USA, Nov. 2023.
 </li>
 
 <li>
