--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@ Workshop "Stochastic Dynamics and Stochastic Equations", Bernoulli Centre, EPFL,
 </li>
 
 <li>
-Arbeitsgemeinschaft: QFT and Stochastic PDEs, Mathematisches Forschungsinstitut Oberwolfach, Germany, Dec. 2023
+Arbeitsgemeinschaft: QFT and Stochastic PDEs, Mathematisches Forschungsinstitut Oberwolfach, Germany, Dec. 2023.
 </li>
 
 <li>
