--- a/index.html
+++ b/index.html
@@ -178,14 +178,10 @@ Analysis seminar, University of Edinburgh, UK, Oct. 2022.
 
         <p> 
         EPFL SB MATH PROPDE<br>
-        MA B2 487 (Bâtiment MA)<br>
+        MA C2 595 (Bâtiment MA)<br>
         Station 8<br>
         1015 Lausanne<br>
         Switzerland
-        
-        <p> 
-        Office: MA C2 595
-        </p>
 
 	</div>
 </body>
