--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ equations in two dimensions</a>.
  <h3> Talks</h3> 
 
 <li>
-(upcoming) Analysis seminar, University of Bonn, Germany, Jan. 2025
+(upcoming) Analysis seminar, University of Bonn, Germany, Jan. 2025.
 </li>				
 
 <li>
