--- a/index.html
+++ b/index.html
@@ -93,6 +93,10 @@ equations in two dimensions</a>.
 
 </ol>
 
+ <p>
+See also my <a href="https://scholar.google.com/citations?user=BZjpLw0AAAAJ&hl=fr">Google Scholar</a> profile.
+</p>			
+
  <h3> Talks</h3> 
 
 <li>
