--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@ See also my <a href="https://scholar.google.com/citations?user=BZjpLw0AAAAJ&hl=f
 </li>	
 
 <li>
-(upcoming) Analysis seminar, Princeton University, USA, Nov. 2024.
+Analysis seminar, Princeton University, USA, Nov. 2024.
 </li>			
 
 <li>
