--- a/index.html
+++ b/index.html
@@ -100,11 +100,11 @@ See also my <a href="https://scholar.google.com/citations?user=BZjpLw0AAAAJ&hl=f
  <h3> Talks</h3> 
 
 <li>
-(upcoming) Analysis seminar, University of Bonn, Germany, Jan. 2025.
+(scheduled) Analysis seminar, University of Bonn, Germany, Jan. 2025.
 </li>				
 
 <li>
-(upcoming) Séminaire de Probabilités et Statistiques, Institut Élie Cartan de Lorraine, France, Nov. 2024.
+(scheduled) Séminaire de Probabilités et Statistiques, Institut Élie Cartan de Lorraine, France, Nov. 2024.
 </li>	
 
 <li>
