--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@ See also my <a href="https://scholar.google.com/citations?user=BZjpLw0AAAAJ&hl=f
 </li>				
 
 <li>
-(scheduled) Séminaire de Probabilités et Statistiques, Institut Élie Cartan de Lorraine, France, Nov. 2024.
+Séminaire de Probabilités et Statistiques, Institut Élie Cartan de Lorraine, France, Nov. 2024.
 </li>	
 
 <li>
