--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 		<article>
 		<h3> About Me </h3>
 		<p> I am a postdoc in the group of <a href="https://www.hairer.org">
-Prof. Martin Hairer</a> at EPFL (Switzerland). I was previously a Ph.D. student at the University of Edinburgh (UK) under the supervision of <a href="https://www.maths.ed.ac.uk/~toh/">
-Prof. Tadahiro Oh</a></a>. 
+Martin Hairer</a> at EPFL (Switzerland). I was previously a Ph.D. student at the University of Edinburgh (UK) under the supervision of <a href="https://www.maths.ed.ac.uk/~toh/">
+Tadahiro Oh</a></a>. 
 
 <br>
 
