--- a/index.html
+++ b/index.html
@@ -50,6 +50,10 @@ Tadahiro Oh</a></a>.
  <ol>
 
 <li>
+<a rel="noreferrer noopener" href="https://arxiv.org/abs/2412.16404" target="_blank"> A simple construction of the sine-Gordon model via stochastic quantization</a> (with M. Gubinelli, M. Hairer, T.Oh)</b>.	
+</li>
+
+<li>
 <a rel="noreferrer noopener" href="https://arxiv.org/abs/2212.00604" target="_blank"> On the inviscid limit of the singular stochastic complex Ginzburg-Landau equation at statistical equilibrium.</a>
 </li>
 
