--- a/index.html
+++ b/index.html
@@ -48,6 +48,10 @@ Tadahiro Oh</a></a>.
 
 
  <ol>
+<li>
+<a rel="noreferrer noopener" href="https://arxiv.org/abs/2502.21128" target="_blank"> Stochastic complex Ginzburg-Landau equation on compact surfaces</a> (with T. Robert)</b>.	
+</li>
+	
 
 <li>
 <a rel="noreferrer noopener" href="https://arxiv.org/abs/2412.16404" target="_blank"> A simple construction of the sine-Gordon model via stochastic quantization</a> (with M. Gubinelli, M. Hairer, T. Oh)</b>.	
@@ -104,7 +108,7 @@ See also my <a href="https://scholar.google.com/citations?user=BZjpLw0AAAAJ&hl=f
  <h3> Talks</h3> 
 
 <li>
-(scheduled) Analysis seminar, University of Bonn, Germany, Jan. 2025.
+ Analysis seminar, University of Bonn, Germany, Jan. 2025.
 </li>				
 
 <li>
