--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ Tadahiro Oh</a></a>.
 <li>
 <a rel="noreferrer noopener" href="https://arxiv.org/abs/2206.08717" target="_blank">
 Smoluchowski-Kramers approximation for the singular stochastic wave
-equations in two dimensions</a>.
+equations in two dimensions</a>, to appear in <b>Electron. J. Probab.</b>.
 
 
 
@@ -75,12 +75,12 @@ equations in two dimensions</a>.
 
 
 <li> 
-<a rel="noreferrer noopener" href="https://arxiv.org/abs/2206.08719" target="_blank">Norm inflation for the derivative nonlinear Schrödinger equation</a> (with Y. Wang), to appear in <b>C. R. Math. Acad. Sci. Paris</b>.
+<a rel="noreferrer noopener" href="https://arxiv.org/abs/2206.08719" target="_blank">Norm inflation for the derivative nonlinear Schrödinger equation</a> (with Y. Wang), <b>C. R. Math. Acad. Sci. Paris</b> 362 (2024), 1857–1871.
 </li>
 
 
 <li>
- <a rel="noreferrer noopener" href="https://link.springer.com/article/10.1007/s40072-022-00237-x" target="_blank">Three-dimensional stochastic cubic nonlinear wave equation with almost space-time white noise</a> (with T. Oh and Y. Wang), <b> Stoch. Partial Differ. Equ. Anal. Comput. 10 (2022), no. 3, 898–963</b>. (<a rel="noreferrer noopener" href="https://arxiv.org/abs/2106.11803" target="_blank">arXiv link</a>)
+ <a rel="noreferrer noopener" href="https://link.springer.com/article/10.1007/s40072-022-00237-x" target="_blank">Three-dimensional stochastic cubic nonlinear wave equation with almost space-time white noise</a> (with T. Oh and Y. Wang), <b> Stoch. Partial Differ. Equ. Anal. Comput.</b>  10 (2022), no. 3, 898–963 (<a rel="noreferrer noopener" href="https://arxiv.org/abs/2106.11803" target="_blank">arXiv link</a>)
 </li>
 
 
