--- a/index.html
+++ b/index.html
@@ -64,12 +64,12 @@ Tadahiro Oh</a></a>.
 <li>
 <a rel="noreferrer noopener" href="https://arxiv.org/abs/2206.08717" target="_blank">
 Smoluchowski-Kramers approximation for the singular stochastic wave
-equations in two dimensions</a>, to appear in <b>Electron. J. Probab.</b>.
+equations in two dimensions</a>, to appear in <b>Electron. J. Probab.</b>
 
 
 
 <li>
-<a rel="noreferrer noopener" href="https://arxiv.org/abs/2211.02938" target="_blank">A note on products of stochastic objects</a> (with T. Oh), to appear in <b>Kyoto J. Math</b>.
+<a rel="noreferrer noopener" href="https://arxiv.org/abs/2211.02938" target="_blank">A note on products of stochastic objects</a> (with T. Oh), to appear in <b>Kyoto J. Math.</b>
 </li>
 
 
