--- a/index.html
+++ b/index.html
@@ -48,6 +48,12 @@ Tadahiro Oh</a></a>.
 
 
  <ol>
+
+	 
+<li>
+<a rel="noreferrer noopener" href="https://arxiv.org/abs/2504.07944" target="_blank"> Hyperbolic sine-Gordon model beyond the first threshold</a> (with T. Oh)</b>.	
+</li>
+	 
 <li>
 <a rel="noreferrer noopener" href="https://arxiv.org/abs/2502.21128" target="_blank"> Stochastic complex Ginzburg-Landau equation on compact surfaces</a> (with T. Robert)</b>.	
 </li>
