--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ Tadahiro Oh</a></a>.
 
 	 
 <li>
-<a rel="noreferrer noopener" href="https://arxiv.org/abs/2504.07944" target="_blank"> Hyperbolic sine-Gordon model beyond the first threshold</a> (with T. Oh)</b>.	
+<a rel="noreferrer noopener" href="https://arxiv.org/abs/2504.07944" target="_blank"> Hyperbolic sine-Gordon model beyond the first threshold</a></b>.	
 </li>
 	 
 <li>
@@ -114,7 +114,15 @@ See also my <a href="https://scholar.google.com/citations?user=BZjpLw0AAAAJ&hl=f
  <h3> Talks</h3> 
 
 <li>
- Analysis seminar, University of Bonn, Germany, Jan. 2025.
+Séminaire Analyse Numérique et EDP, Université Paris–Saclay, France, May 2025.
+</li>		
+
+<li>
+Seminar on stochastic evolution equations, Academy of Sciences of the Czech Republic, Czech Republic, May 2025.
+</li>		
+
+<li>
+Analysis seminar, University of Bonn, Germany, Jan. 2025.
 </li>				
 
 <li>
