--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@ Seminar on stochastic evolution equations, Academy of Sciences of the Czech Repu
 </li>		
 
 <li>
-Analysis seminar, University of Bonn, Germany, Jan. 2025.
+Graduate seminar on Advanced topics in PDE, University of Bonn, Germany, Jan. 2025.
 </li>				
 
 <li>
