--- a/index.html
+++ b/index.html
@@ -187,11 +187,11 @@ Analysis seminar, University of Edinburgh, UK, Oct. 2022.
         <h3> Events organised</h3> 
 
 	    <li>
-        <a href=https://bernoulli.epfl.ch/programs/young-researchers-in-deterministic-and-probabilistic-dispersive-equations/>Workshop: "Young researchers in deterministic and probabilistic dispersive equations"</a> (7-11 October 2024, co-organiser).
+        <a href=https://bernoulli.epfl.ch/programs/young-researchers-in-deterministic-and-probabilistic-dispersive-equations/>Workshop: "Young researchers in deterministic and probabilistic dispersive equations"</a> (7–11 October 2024, co-organiser).
         </li>		
 
 	<li>
-	<a href=http://www.macs.hw.ac.uk/~op4/3daysWS.html>Workshop: "Deterministic and Probabilistic Dynamics of Nonlinear Dispersive PDEs"</a> (14-16 June 2023, co-organiser).
+	<a href=http://www.macs.hw.ac.uk/~op4/3daysWS.html>Workshop: "Deterministic and Probabilistic Dynamics of Nonlinear Dispersive PDEs"</a> (14–16 June 2023, co-organiser).
 
 	</li>
         
