--- a/index.html
+++ b/index.html
@@ -114,11 +114,11 @@ See also my <a href="https://scholar.google.com/citations?user=BZjpLw0AAAAJ&hl=f
  <h3> Talks</h3> 
 
 <li>
-Séminaire Analyse Numérique et EDP, Université Paris–Saclay, France, May 2025.
+(Scheduled) Séminaire Analyse Numérique et EDP, Université Paris–Saclay, France, May 2025.
 </li>		
 
 <li>
-Seminar on stochastic evolution equations, Academy of Sciences of the Czech Republic, Czech Republic, May 2025.
+(Scheduled) Seminar on stochastic evolution equations, Academy of Sciences of the Czech Republic, Czech Republic, May 2025.
 </li>		
 
 <li>
