--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ Tadahiro Oh</a></a>.
 <li>
 <a rel="noreferrer noopener" href="https://arxiv.org/abs/2206.08717" target="_blank">
 Smoluchowski-Kramers approximation for the singular stochastic wave
-equations in two dimensions</a>, to appear in <b>Electron. J. Probab.</b>
+equations in two dimensions</a>, <b>Electron. J. Probab. 30, 1-49, (2025).</b>
 
 
 
@@ -114,11 +114,11 @@ See also my <a href="https://scholar.google.com/citations?user=BZjpLw0AAAAJ&hl=f
  <h3> Talks</h3> 
 
 <li>
-(Scheduled) Séminaire Analyse Numérique et EDP, Université Paris–Saclay, France, May 2025.
+Séminaire Analyse Numérique et EDP, Université Paris–Saclay, France, May 2025.
 </li>		
 
 <li>
-(Scheduled) Seminar on stochastic evolution equations, Academy of Sciences of the Czech Republic, Czech Republic, May 2025.
+Seminar on stochastic evolution equations, Academy of Sciences of the Czech Republic, Czech Republic, May 2025.
 </li>		
 
 <li>
