--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ Tadahiro Oh</a></a>.
 <li>
 <a rel="noreferrer noopener" href="https://arxiv.org/abs/2206.08717" target="_blank">
 Smoluchowski-Kramers approximation for the singular stochastic wave
-equations in two dimensions</a>, <b>Electron. J. Probab. 30, 1-49, (2025).</b>
+equations in two dimensions</a>, <b>Electron. J. Probab.</b> 30, 1-49, (2025).
 
 
 
