--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ Tadahiro Oh</a></a>.
 	
 
 <li>
-<a rel="noreferrer noopener" href="https://arxiv.org/abs/2412.16404" target="_blank"> A simple construction of the sine-Gordon model via stochastic quantization</a> (with M. Gubinelli, M. Hairer, T. Oh)</b>.	
+<a rel="noreferrer noopener" href="https://arxiv.org/abs/2412.16404" target="_blank"> A simple construction of the sine-Gordon model via stochastic quantization</a> (with M. Gubinelli, M. Hairer, T. Oh)</b>, to appear in <b>J. London Math. Soc.</b>.	
 </li>
 
 <li>
