--- a/index.html
+++ b/index.html
@@ -114,6 +114,10 @@ See also my <a href="https://scholar.google.com/citations?user=BZjpLw0AAAAJ&hl=f
  <h3> Talks</h3> 
 
 <li>
+(Scheduled) Workshop "Nonlinear PDEs in Guimarães", University of Minho, Portugal, July 2025.
+</li>				
+
+<li>
 Séminaire Analyse Numérique et EDP, Université Paris–Saclay, France, May 2025.
 </li>		
 
